[tool.poetry]
name = "policy-analysis"
version = "0.1.0"
description = ""
authors = ["hularuns <159131400+hularuns@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
earthengine-api = "^1.3.1"
rasterio = "^1.4.2"
geopandas = "^1.0.1"
tqdm = "^4.67.0"
geemap = "^0.35.1"
scipy = "^1.14.1"
rasterstats = "^0.20.0"
rioxarray = "^0.18.1"
fiona = "^1.10.1"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
